--------------------------------------------------------------------------------
Fusion 1.209 - January ??, 2004
--------------------------------------------------------------------------------
- 01-29-04: Fixed bug #394: Sends "Party already exists" to a novice whose basic skill level isnt 7 yet. [Mitch]
- 01-29-04: Added new GM Command: #revive playernamehere - Used to revive other players! [Mitch]
- 01-29-04: Updated message sending for -server and -users to send the correct message length instead of just 256 or 200. [Mitch]
- 01-29-04: Added messages for -pword command for errors and successfully password change. [Mitch]
- 01-29-04: Updated message sending for #whois, #ban, and #kick to send the correct message length instead of just 256 or 200. [Mitch]
- 01-29-04: Added messages to #save command notifying the user that the map and coords have been saved. [Mitch]
- 01-29-04: Updated calculation of shield card dmg (DB changes). [Colus]
- 01-29-04: Added rest of NPC elemental attacks [Colus]
- 01-29-04: Added 'Option_AutoBackup' Feature. Auto Backs up on Second Interval. [AlexKreuz]
- 01-29-04: Fixed error that was given if just "-" was sent from fusion exe. [Mitch]
- 01-29-04: Fixed tray icon. It now is removed after double-clicking on it. [Mitch]
- 01-28-04: Undid Mitch's change b/c it prevented any attacks from happening [Colus]
- 01-28-04: Just fixed some grammatical errors in some hardcoded text. [Mitch]
- 01-28-04: Removed some useless code loops that just affect server performance. [Mitch]
- 01-28-04: Fixed attacking monsters on same square as players [Mitch]
- 01-27-04: Fixed Sanctuary healing dead players (yes, this includes Play Dead!) [Colus]
- 01-27-04: Updated item reqs for Graffiti, Talkie Box, Warp Portal, Venom Dust [Colus]
- 01-27-04: Added effects for Armor cards, Garment cards coming soon. [Colus]
- 01-27-04: Updated Lex Aeterna calculations, probably will again. [Colus]